--- a/frontend/src/app/inventory/inventory.css
+++ b/frontend/src/app/inventory/inventory.css
@@ -75,59 +75,58 @@ body, html {
     font-size: 1rem;
     margin-top: 2vh;
     align-content: flex-start;
+    flex-direction: row;
+}
+
+#SelectAll {
+    color: #007BFF;  
+    text-decoration: underline;  
+    cursor: pointer;
+    width: 6%;
+}
+
+#DeselectAll {
+    color: #007BFF;  
+    text-decoration: underline;  
+    cursor: pointer;  
+    width: 7%;
 }
 
 .IDLabel {
-    padding-left:5.5vw;
+    /* padding-left:5.5vw; */
+    width: 12.5%;
     color: #333;
     background-color: transparent;
     border: transparent;
-}
-
-.IDOnClick {
-    padding-left: 5.5vw;
-    color: #9B525F;
 }
 
 .ItemLabel {
-    padding-left: 5vw;
+    /* padding-left: 5vw; */
+    width: 17%;
     color: #333;
     background-color: transparent;
     border: transparent;
-}
-
-
-.ItemOnClick {
-    padding-left: 8.5%;
-    color: #9B525F;
 }
 
 .AvaiLabel {
-    padding-left: 7.5vw;
+    /* padding-left: 7.5vw; */
+    width: 15%;
     color: #333;
     background-color: transparent;
     border: transparent;
-}
-
-.AvailOnClick {
-    padding-left: 6vw;
-    color: #9B525F;
 }
 
 .ConLabel {
-    padding-left: 5.5vw;
+    /* padding-left: 5.5vw; */
+    width: 20%;
     color: #333;
     background-color: transparent;
     border: transparent;
 }
 
-.ConOnClick {
-    padding-left: 4vw;
-    color: #9B525F;
-}
-
 .TagsLabel {
-    padding-left: 7vw;
+    /* padding-left: 7vw; */
+    width: 20%;
     color: #333;
     background-color: transparent;
     font-size: small;
@@ -135,7 +134,7 @@ body, html {
     align-items: flex-end;
 }
 
-#SortTag, #SelectAll {
+#SortTag, #SelectAll, #DeselectAll {
     cursor: pointer;
     background: none; 
     border: none;
@@ -157,17 +156,15 @@ body, html {
     color: #1c1c1c;
 }
 
-#SelectAll {
-    color: #007BFF;  
-    text-decoration: underline;  
-    cursor: pointer;  
-}
-
 #SelectAll:hover {
     color: #0056b3;  
     text-decoration: underline;  
 }
 
+#DeselectAll:hover {
+    color: #0056b3;  
+    text-decoration: underline;  
+}
 
 .ItemBarHolder {
     background-color: white;
