--- a/frontend/src/app/inventory/inventory.css
+++ b/frontend/src/app/inventory/inventory.css
@@ -66,35 +66,51 @@ body, html {
     display: flex;
     justify-content: flex-start;
     padding-bottom: 1vh;
-    width: 90%;
+    width: 100%;
     padding-right: 10%;
     padding-left: 0px;
     position: absolute;
     bottom: 0;
-    gap: 2vh;
+    /* gap: 2vh; */
     font-size: 1rem;
     margin-top: 2vh;
     align-content: flex-start;
     flex-direction: row;
 }
 
+.leftSectionP {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 16.5%;
+    justify-content: space-between;
+}
+
 #SelectAll {
     color: #007BFF;  
     text-decoration: underline;  
     cursor: pointer;
-    width: 6%;
+    width: 45%;
 }
 
 #DeselectAll {
     color: #007BFF;  
     text-decoration: underline;  
     cursor: pointer;  
-    width: 7%;
+    width: 55%;
+}
+
+.centerSectionP {
+    display: flex;
+    flex-direction: row;
+    align-items: left;
+    width: 72%;
 }
 
 .IDLabel {
     /* padding-left:5.5vw; */
-    width: 12.5%;
+    padding-left: 5%;
+    width: 22%;
     color: #333;
     background-color: transparent;
     border: transparent;
@@ -102,7 +118,7 @@ body, html {
 
 .ItemLabel {
     /* padding-left: 5vw; */
-    width: 17%;
+    width: 33%;
     color: #333;
     background-color: transparent;
     border: transparent;
@@ -110,7 +126,7 @@ body, html {
 
 .AvaiLabel {
     /* padding-left: 7.5vw; */
-    width: 15%;
+    width: 34%;
     color: #333;
     background-color: transparent;
     border: transparent;
@@ -118,15 +134,22 @@ body, html {
 
 .ConLabel {
     /* padding-left: 5.5vw; */
-    width: 20%;
+    width: 40%;
     color: #333;
     background-color: transparent;
     border: transparent;
 }
 
+.rightSectionP {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 40%;
+}
+
 .TagsLabel {
     /* padding-left: 7vw; */
-    width: 20%;
+    width: 100%;
     color: #333;
     background-color: transparent;
     font-size: small;
