--- a/frontend/src/app/borrowers/BorrowerExpanded.css
+++ b/frontend/src/app/borrowers/BorrowerExpanded.css
@@ -13,6 +13,23 @@
 
 }
 
+.titleTop {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  flex-direction: row;
+}
+
+.buttonsB {
+  display: flex;
+  flex-shrink: 0;
+  margin-left: auto;
+  margin-right: 20px;
+  gap: 10px;
+}
+
 .popup-anim-wrapper {
   animation-duration: 0.3s;
   animation-fill-mode: forwards;
@@ -49,7 +66,7 @@
   background-color: white;
   position: relative;
   width: 33vw;
-  height: 100vh;
+  min-height: 100vh;
   flex-direction: column;
   text-align: left;
   min-width: 450px;
@@ -120,7 +137,6 @@
   position: absolute;
   bottom: 0;
   left: 0;
-  background: white;
 }
 
 .nav-arrow {
