so much return popup stuff

--- a/frontend/src/app/components/BorrowPopup.css
+++ b/frontend/src/app/components/BorrowPopup.css
@@ -191,7 +191,15 @@
     -webkit-appearance: none; 
     -moz-appearance: none;    
     appearance: none;
+    transition: background-color 0.3s ease, color 0.3s ease, transform 0.3s ease;
   }
+
+  .delete-button:hover {
+    background-color: #E3CECE;
+    color: #FFF;
+    transform: scale(1.1);
+    cursor: pointer;
+}
   
   .form-row {
     display: flex;
