--- a/frontend/src/app/components/ReturnButton.css
+++ b/frontend/src/app/components/ReturnButton.css
@@ -40,7 +40,7 @@
     margin: 1vh 1vw;
     flex-direction: column;
     background-color: #E3CECE;
-    border: 1px solid #9B525F;
+    border: 1.5px solid #9B525F;
     padding: 1vh 1vw;
     width: 26vw;
     height: 50vh;
@@ -56,33 +56,40 @@
 .itemID {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     align-items: center;
+    width: 100%;
 }
 
 /* container for item name and id number -- middle element in .itemID */
 .itemInfo {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: left;
+    width: 40%;
+    margin-left: 1vw;
 }
 
 /* note: will need separate css class for handling exit button */
 .exitBtn {
+    align-self: flex-start;
+    text-align: right;
     padding: 0;
-    background: none; 
+    background: none;
     border: none;
     color: #000000;
     box-shadow: none;
-    padding-right: 1px; 
+    margin-right: 1px;
+    width: 20%;
+}
+
+.exitBtn {
+    transition: background-color 0.3s ease, color 0.3s ease, transform 0.3s ease;
 }
 
 .exitBtn:hover {
-    padding: 0;
-    background: none; 
-    border: none;
-    color: #000000;
-    box-shadow: none;
+    background-color: #E3CECE;
+    color: #FFF;
+    transform: scale(1.1);
     cursor: pointer;
 }
 /* note: image will need white border styling and sizing */
@@ -91,13 +98,20 @@
     height: 15vh;
 }
 
-/* textbox for "notes" about return item */
 .notesTextbox {
-    width: 100%;
-    height: 11vh;
-    flex: 0;
+    border-radius: .2rem;
     border: 1px solid #9B525F;
-    background-color: #F8F5F5;
+    background: #FFF;
+    box-shadow: 0px .1rem .2rem 0px rgba(0, 0, 0, 0.25);
+    height: 11vh;
+    width: stretch;
+    resize: none;
+    overflow: hidden;
+    font-size: 1rem;
+    padding: .35rem;
+    outline: none;
+    line-height: 3.5vh;
+    text-wrap: wrap;
 }
 
 .dropdown-component {
@@ -295,9 +309,10 @@
 
 .return-image {
     border-radius: 4px;
-    border: 1px solid #9b525f;
+    border: 5px solid var(--white);
     position: relative;
-    width: 6vw;
+    /* width: 6vw; */
+    width: 40%;
   }
 
   .return-image::after {
