fixed css settings glitch

--- a/frontend/src/app/settings/settings.css
+++ b/frontend/src/app/settings/settings.css
@@ -110,7 +110,7 @@
     width: 100%;
   }
 
-  .container {
+  .containerS {
     margin-top: 5rem;
     display: flex;
     justify-content: center;
