--- a/frontend/src/app/components/SettingsPage.css
+++ b/frontend/src/app/components/SettingsPage.css
@@ -43,7 +43,7 @@
   margin-bottom: 25px;
 }
 
-.body {
+.bodySettings {
   font-family: Arial, sans-serif;
   display: flex;
   align-items: flex-start;
@@ -101,7 +101,7 @@ h1 {
     box-shadow: 0px .1rem .2rem 0px rgba(0, 0, 0, 0.25);
 }
   
-  form {
+  .profile-form {
     display: flex;
     flex-direction: column;
     align-items: center;
